lyrics page is now fully functional

--- a/src/py/music/templates/music/lyrics.html
+++ b/src/py/music/templates/music/lyrics.html
@@ -14,27 +14,27 @@
 				<span><a href="/{% trans 'music/' %}"><i class="icon fas fa-music"></i>{% trans 'Music' %}</a></span>
 			</li>
 			<li>
-				<span><a href="/{% trans 'music/albums/' %}xxx-xxx"><i class="fas fa-compact-disc"></i>[[Яхния от мисли]]</a></span>
+				<span><a href="/{% trans 'music/albums/' %}{{ album.album.id }}-{{ album.slug }}"><i class="fas fa-compact-disc"></i>{{ album.title }}</a></span>
 			</li>
 			<li>
-				<span><a href="/{% trans 'music/songs/' %}xxx-xxx"><i class="fas fa-guitar"></i>[[Момчето от делтата на Мисисипи]]</a></span>
+				<span><a href="/{% trans 'music/songs/' %}{{ lyrics.song.id }}-{{ lyrics.song.slug }}"><i class="fas fa-guitar"></i>{{ song_title }}</a></span>
 			</li>
-			<li><i class="fas fa-file-alt"></i>{{page.title}}</li>
+			<li><i class="fas fa-file-alt"></i>{% trans 'lyrics'|title %}</li>
 		</ul>
 	</nav>
 
-	<h1 class="content-heading">{{page.title}}</h1>
+	<h1 class="content-heading">{% trans 'Song Lyrics' %}</h1>
 
 	<div class="lyrics-super-wrapper">
 		<div class="lyrics-wrapper">
-			<h3>[[Спонтанно механично разпръскване на аромати у дома]]</h3>
+			<h3>{{ lyrics.title }}</h3>
 			<a class="english-translation-link" href="#english_lyrics">English translation below</a>
-			<div class="lyrics">{% markdown %}ORIGINALISH{% endmarkdown %}</div>
+			<div class="lyrics">{% markdown %}{{ lyrics.lyrics }}{% endmarkdown %}</div>
 		</div>
 
 		<div class="lyrics-wrapper">
-			<h3 id="english_lyrics">[[Spontaneous mechanic dipersion of fragrances at home]]</h3>
-			<div class="lyrics">{% markdown %}ENGRISH{% endmarkdown %}</div>
+			<h3 id="english_lyrics">{{ lyrics.english_title }}</h3>
+			<div class="lyrics">{% markdown %}{{ lyrics.english_lyrics }}{% endmarkdown %}</div>
 		</div>
 	</div>
 </div>
