--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -117,7 +117,7 @@
 
 							{% language 'bg' %}
 							<li>
-								<a href="/{% trans page.url %}{{ page.url_slug }}" lang="bg">
+								<a href="/{% trans page.url %}{{ page.url_slug }}{% trans page.url_slug_operation %}" lang="bg">
 									<span class="icon flag flag-bg"></span>
 									Български
 								</a>
@@ -126,7 +126,7 @@
 
 							{% language 'en' %}
 							<li>
-								<a href="/{% trans page.url %}{{ page.url_slug }}" lang="en">
+								<a href="/{% trans page.url %}{{ page.url_slug }}{% trans page.url_slug_operation %}" lang="en">
 									<span class="icon flag flag-en"></span>
 									English
 								</a>
@@ -135,7 +135,7 @@
 
 							{% language 'fr' %}
 							<li>
-								<a href="/{% trans page.url %}{{ page.url_slug }}" lang="fr">
+								<a href="/{% trans page.url %}{{ page.url_slug }}{% trans page.url_slug_operation %}" lang="fr">
 									<span class="icon flag flag-fr"></span>
 									Français
 								</a>
