--- a/src/py/music/templates/music/song.html
+++ b/src/py/music/templates/music/song.html
@@ -14,7 +14,7 @@
 				<span><a href="/{% trans 'music/' %}"><i class="icon fas fa-music"></i>{% trans 'Music' %}</a></span>
 			</li>
 			<li>
-				<span><a href="/{% trans 'music/albums/' %}{{ song_album.album_id }}-{{ song_album.slug }}"><i class="fas fa-compact-disc"></i>{{ song_album.title }}</a></span>
+				<span><a href="{{ song_album.get_absolute_url }}"><i class="fas fa-compact-disc"></i>{{ song_album.title }}</a></span>
 			</li>
 			<li>
 				<i class="fas fa-guitar"></i>{{ song_title }}
@@ -25,7 +25,7 @@
 	<h1 class="content-heading">{% trans 'Song Details' %}</h1>
 	<div>
 		<h2 class="tune-title">
-			<a href="/{% trans 'music/songs/' %}{{song.id}}-{{song.slug}}/download">{{ song_title }}</a> – {{ song.duration }}
+			<a href="{{ song.get_absolute_url }}/download">{{ song_title }}</a> – {{ song.duration }}
 		</h2>
 
 		<h5 class="tune-release-date">{{song.release_date}}</h5>
@@ -38,9 +38,9 @@
 				</a>
 			</li>
 
-			{% if song.songlyrics %}
+			{% if song.song_lyrics %}
 			<li class="tune-lyrics">
-				<a href="/{% trans 'music/songs/' %}{{ song.id }}-{{ song.slug }}{% trans '/lyrics/' %}">
+				<a href="{{ song.get_absolute_url }}{% trans '/lyrics/' %}">
 					{% comment %}Translators: LYRICS button on song page.{% endcomment %}
 					<i class="fas fa-file-alt"></i><span>{% trans 'lyrics' %}</span>
 				</a>
@@ -48,7 +48,7 @@
 			{% endif %}
 
 			<li class="tune-download">
-				<a href="/{% trans 'music/songs/' %}{{ song.id }}-{{ song.slug }}{% trans '/download/' %}">
+				<a href="{{ song.get_absolute_url }}{% trans '/download/' %}">
 					{% comment %}Translators: DOWNLOAD button on song page.{% endcomment %}
 					<i class="fas fa-file-download"></i><span>{% trans 'download' %}</span>
 				</a>
