--- a/src/py/music/templates/music/lyrics.html
+++ b/src/py/music/templates/music/lyrics.html
@@ -23,6 +23,7 @@
 		</ul>
 	</nav>
 
+	{% comment %}Translators: Lyrics page big heading{% endcomment %}
 	<h1 class="content-heading">{% trans 'Song Lyrics' %}</h1>
 
 	<div class="lyrics-super-wrapper">
