more translation improvements

--- a/src/py/main/templates/main/index.html
+++ b/src/py/main/templates/main/index.html
@@ -9,7 +9,7 @@
 		<article>
 				<p>
 					{% blocktrans trimmed %}
-						Welcome the Black Blues Dimosaur's den (latin: <i>Dimmu Saurus</i>). It is a garage project for blues, rock and metal music, without any rules or limitations. The way real music should be.
+						Welcome the Black Blues Dimosaur's den (Latin: <i>Dimmu Saurus</i>). It is a garage project for blues, rock and metal music, without any rules or limitations. The way real music should be.
 					{% endblocktrans %}
 				</p>
 				<p>
