--- a/src/py/music/templates/music/song.html
+++ b/src/py/music/templates/music/song.html
@@ -40,7 +40,7 @@
 
 			{% if song.youtube %}
 			<li class="tune-youtube">
-				<a href="{{ song.youtube }}" rel="nofollow" target="_blank">
+				<a href="{{ song.youtube }}" rel="me" target="_blank">
 					{% comment %}Translators: Youtube button on song page.{% endcomment %}
 					<i class="fab fa-youtube"></i><span>{% trans 'watch' %}</span>
 				</a>
