--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -18,6 +18,28 @@
 		{% if page.description %}
 			<meta name="description" content="{{ page.description }}">
 		{% endif %}
+
+		{% language 'bg' %}
+			<link
+			href="{{ page.base_url }}/{% trans page.url %}{{ page.url_slug }}{% trans page.url_slug_operation %}"
+			rel="alternate"
+			hreflang="bg" />
+		{% endlanguage %}
+
+		{% language 'en' %}
+			<link
+			href="{{ page.base_url }}/{% trans page.url %}{{ page.url_slug }}{% trans page.url_slug_operation %}"
+			rel="alternate"
+			hreflang="en" />
+		{% endlanguage %}
+
+		{% language 'fr' %}
+			<link
+			href="{{ page.base_url }}/{% trans page.url %}{{ page.url_slug }}{% trans page.url_slug_operation %}"
+			rel="alternate"
+			hreflang="fr" />
+		{% endlanguage %}
+
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -117,7 +139,10 @@
 
 							{% language 'bg' %}
 							<li>
-								<a href="/{% trans page.url %}{{ page.url_slug }}{% trans page.url_slug_operation %}" lang="bg">
+								<a
+								href="{{ page.base_url }}/{% trans page.url %}{{ page.url_slug }}{% trans page.url_slug_operation %}"
+								rel="alternate"
+								hreflang="bg">
 									<span class="icon flag flag-bg"></span>
 									Български
 								</a>
@@ -126,7 +151,10 @@
 
 							{% language 'en' %}
 							<li>
-								<a href="/{% trans page.url %}{{ page.url_slug }}{% trans page.url_slug_operation %}" lang="en">
+								<a
+								href="{{ page.base_url }}/{% trans page.url %}{{ page.url_slug }}{% trans page.url_slug_operation %}"
+								rel="alternate"
+								hreflang="en">
 									<span class="icon flag flag-en"></span>
 									English
 								</a>
@@ -135,7 +163,10 @@
 
 							{% language 'fr' %}
 							<li>
-								<a href="/{% trans page.url %}{{ page.url_slug }}{% trans page.url_slug_operation %}" lang="fr">
+								<a
+								href="{{ page.base_url }}/{% trans page.url %}{{ page.url_slug }}{% trans page.url_slug_operation %}"
+								rel="alternate"
+								hreflang="fr">
 									<span class="icon flag flag-fr"></span>
 									Français
 								</a>
@@ -289,19 +320,25 @@
 			<div class="social">
 				<div class="social-label">{% trans "Follow" %}:</div>
 				<div class="social-icons">
+					{% comment %}
 					<a
 						class="bandcamp-link"
 						title="{% trans 'Dimmu Saurus Bandcamp page' %}"
 						href="http://bandcamp.com"
-						target="_blank"><i class="fab fa-bandcamp"></i></a><a
+						target="_blank"
+						rel="me"><i class="fab fa-bandcamp"></i></a>
+					{% endcomment %}
+					<a
 						class="facebook-link"
 						title="{% trans 'Dimmu Saurus on Facebook' %}"
 						href="https://www.facebook.com/dimmusaurus/"
-						target="_blank"><i class="fab fa-facebook-square"></i></a><a
+						target="_blank"
+						rel="me"><i class="fab fa-facebook-square"></i></a><a
 						class="youtube-link"
 						title="{% trans 'Dimmu Saurus Youtube channel' %}"
 						href="https://www.youtube.com/playlist?list=PLBugGYGZgZWcA8ePOBLDdyD1__D7WWxMI"
-						target="_blank"><i class="fab fa-youtube"></i></a>
+						target="_blank"
+						rel="me"><i class="fab fa-youtube"></i></a>
 				</div>
 			</div>
 
