--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -272,19 +272,16 @@
 
 
 		<div class="player shadow-top">
+			<audio></audio>
 			<a
 				id="pl-playlist-toggle"
 				href="javascript:;"
 				class="playlist"><i class="fas fa-chevron-up"></i></a>
 
-				<div class="track-title">
-					<a href="javascript:;">
-					Le temps de chasseurs est venu encore une fois
-					</a>
-				</div>
+				<div class="track-title"></div>
 
 			<div class="track-progress-bar-container">
-				<span class="progress-time">02:16</span>
+				<span class="progress-time"></span>
 
 				<div class="track-progress-bar">
 					<div class="track-progress-bar-background">
@@ -292,7 +289,7 @@
 					</div>
 				</div>
 
-				<span class="total-time">10:38</span>
+				<span class="total-time"></span>
 			</div>
 
 			<div class="player-controls">
