--- a/src/css/10-base.css
+++ b/src/css/10-base.css
@@ -126,6 +126,7 @@ footer .social-icons .bandcamp-link {display: none;} /* There is no bandcamp yet
 }
 
 .player audio {display: none;}
+.player .disabled {cursor: default;} /* disabled controls */
 
 .player .track-progress-bar-container, .player .player-controls {
 	display: inline-flex;
