player can now play tracks; mute button works

--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -303,7 +303,7 @@
 					class="fas fa-step-backward"
 					href="javascript:;"></a><a
 
-					onclick="Player.play()"
+					onclick="Player.playToggle()"
 					id="pl-play"
 					class="fas fa-play"
 					href="javascript:;"></a><a
