player resumes with next song after the current one finishes

--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -272,7 +272,7 @@
 
 
 		<div class="player shadow-top">
-			<audio></audio>
+			<audio onended="Player.next()"></audio>
 			<a
 				id="pl-playlist-toggle"
 				href="javascript:;"
