--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -68,6 +68,10 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
 
 		<script>
+			PLAYER_MSG = {
+				errorLoadingTrack: '{% trans "Cannot load this song!" %}'
+			};
+
 			function isOldBrowser() {
 				"use strict";
 
