--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -282,6 +282,10 @@
 				href="javascript:;"
 				class="playlist"><i class="fas fa-chevron-up"></i></a>
 
+				<div class="loading-indicator">
+					<i class="fas fa-sync-alt"></i>
+					{% trans 'Loading...' %}
+				</div>
 				<div class="track-title"></div>
 
 			<div class="track-progress-bar-container">
