--- a/src/css/00-colors.css
+++ b/src/css/00-colors.css
@@ -68,9 +68,10 @@ footer .social-icons a:not(:last-child) {border-right: 1px solid var(--menu-sepa
 .player {border-top: 1px solid var(--menu-separator-strong);}
 .player .disabled {color: var(--menu-icon-inactive-color);}
 .player .error {color: var(--menu-item-hovered);}
-.player .track-progress-bar-background {background: var(--menu-separator-strong);}
-.player .track-progress {background: var(--menu-text-color);}
 .player .player-controls a {border-left: 1px solid var(--menu-separator-medium);}
+.player .track-progress {background: var(--menu-text-color);}
+.player .track-progress-bar-background {background: var(--menu-separator-strong);}
+.player .loading-indicator {color: var(--body-background-color);}
 
 .shadow-top {box-shadow: var(--shadow-top);}
 .shadow-bottom {box-shadow: var(--shadow-bottom);}
@@ -114,4 +115,18 @@ footer .social-icons a:not(:last-child) {border-right: 1px solid var(--menu-sepa
 	}
 
 	.menu-music {box-shadow: var(--shadow-bottom);}
+
+	.player.loading .track-progress-bar-background {
+		background-image: linear-gradient(
+			135deg,
+			var(--menu-separator-medium) 25%,
+			var(--menu-separator-soft) 25%,
+			var(--menu-separator-soft) 50%,
+			var(--menu-separator-medium) 50%,
+			var(--menu-separator-medium) 75%,
+			var(--menu-separator-soft) 75%,
+			var(--menu-separator-soft) 100%
+		);
+		background-size: 2em 2em;
+	}
 }
