--- a/src/css/legacy.css
+++ b/src/css/legacy.css
@@ -31,6 +31,7 @@ footer .copyright {
 
 footer .social,
 .player .track-title,
+.player .loading-indicator,
 .content-discography .album-tracks,
 .menu-playlist li > a .playlist-title {
   -webkit-flex: auto;
