ajaxification now works after navigation; added a warning for language links

--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -69,7 +69,8 @@
 
 		<script>
 			PLAYER_MSG = {
-				errorLoadingTrack: '{% trans "Cannot load this song!" %}'
+				errorLoadingTrack: '{% trans "Cannot load this song!" %}',
+				newLanguageWillInterruptMusic: `{% trans "Changing the language will interrupt music playback. Continue?" %}`
 			};
 
 			function isOldBrowser() {
