--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -280,6 +280,10 @@
 			</div>
 		</div>
 
-	</body>
+		<div class="ajax-loader">
+			<img src="{% static 'img/vrtelejka.gif' %}">
+			<span>{% trans 'Loading...' %}</span>
+		</div>
 
+	</body>
 </html>
