--- a/src/css/00-colors.css
+++ b/src/css/00-colors.css
@@ -1,4 +1,6 @@
 :root {
+	--ajax-loader-background-color: black;
+
 	--body-background-color: #ececec;
 	--body-background-mask: rgba(255, 255, 255, 0.5);
 	--body-text-color: #000;
@@ -29,6 +31,14 @@ body {
 header, .content-wrapper {background-color: var(--body-background-mask);}
 header .logo {background: #fafafa;} /* this must never change */
 hr {border-color: var(--menu-text-color);}
+
+.ajax-loader{
+	background-color: var(--ajax-loader-background-color);
+	color: var(--ajax-loader-background-color);
+}
+.ajax-loader-spinning{
+	color: var(--menu-text-color);
+}
 
 .content-wrapper {box-shadow: 0 3em 3em var(--body-background-mask);} /* mask the gap when there is no player */
 .content a {color: var(--link-color);}
@@ -75,6 +85,7 @@ footer .social-icons a:not(:last-child) {border-right: 1px solid var(--menu-sepa
 
 .shadow-top {box-shadow: var(--shadow-top);}
 .shadow-bottom {box-shadow: var(--shadow-bottom);}
+
 
 /**
  * Link animations and special effects for desktop
@@ -128,5 +139,34 @@ footer .social-icons a:not(:last-child) {border-right: 1px solid var(--menu-sepa
 			var(--menu-separator-soft) 100%
 		);
 		background-size: 2em 2em;
+	}
+}
+
+
+/**
+ * Ajax spinner animations
+ */
+@media screen and (max-width: 48em) {
+	.ajax-loader {
+		transition:
+		color .4s ease-out,
+		opacity .4s ease-out,
+		width .5s ease-out;
+	}
+	.ajax-loader-spinning {transition: width .1s ease-in, opacity .25s ease-in;}
+}
+
+@media screen and (min-width: 48em) {
+	.ajax-loader {
+		text-shadow: 0 -10px 18px var(--ajax-loader-background-color);
+		transition:
+			color .3s ease-out,
+			opacity .6s ease-out,
+			text-shadow 1s ease-out,
+			top 1.1s cubic-bezier(1.000, 0.110, 0.990, 0);
+	}
+	.ajax-loader-spinning {
+		text-shadow: 0 0 0 var(--menu-item-hovered);
+		transition: opacity .15s ease-in;
 	}
 }
