--- a/src/css/10-base.css
+++ b/src/css/10-base.css
@@ -30,6 +30,34 @@ footer .social-icons .bandcamp-link {display: none;} /* There is no bandcamp yet
 /**********************************************************************************
  * Components
  **********************************************************************************/
+.ajax-loader {
+	align-items: center;
+
+	border: 3px outset;
+	border-radius: 24px 0 0 24px;
+	border-right: none;
+
+	display: flex;
+	height: 2.5em;
+	opacity: 0;
+	padding: 8px 16px;
+	position: absolute;
+	right: 0;
+	width: 0;
+}
+
+.ajax-loader > img{
+	display: flex;
+	height: 2.4em;
+	margin-right: 5px;
+	vertical-align: middle;
+	width: 2.4em;
+}
+
+.ajax-loader-spinning {
+	opacity: 0.9;
+}
+
  .menu li, .content-tune .tune-links li, .breadcrumbs li {
 	list-style-type: none;
 }
