--- a/src/css/12-s.css
+++ b/src/css/12-s.css
@@ -14,6 +14,8 @@
 	.menu-playlist {height: calc(80vh - 2.5em);}
 	.menu-playlist li > a .playlist-time {margin-left: 10px;}
 
+	.ajax-loader-spinning {width: 163px;}
+
 	 /* 100% - header-height - footer - player */
 	.content-wrapper {min-height: calc(100vh - 64px - 2.5em - 2.5em);}
 	.content {padding: 1em 1.5em 0.67em;}
